prevent chunk coordinates from wrapping onto a new line

--- a/src/components/ClueTable.scss
+++ b/src/components/ClueTable.scss
@@ -24,6 +24,7 @@
       .alternate-chunk {
         color: #2a59bd;
         cursor: pointer;
+        white-space: nowrap;
       }
     }
   }
