--- a/src/components/StashUnitTable.scss
+++ b/src/components/StashUnitTable.scss
@@ -28,6 +28,7 @@
       .chunk-coords {
         color: #2a59bd;
         cursor: pointer;
+        white-space: nowrap;
       }
     }
   }
